@@ -32,6 +32,7 @@
 #include "station.h"
 #include <iostream> 
 #include <cstdlib>
+#include <algorithm>
 ////////////////////////////////////////////////////////////////////////////////
 namespace Core {
 ////////////////////////////////////////////////////////////////////////////////
@@ -130,6 +131,14 @@ Station::Station(const std::string& source_name, const std::string& id,
          }
          _cookie = new std::string(cookie);
          _viewURL = new std::string(view_url);
+
+         /* Hack for yr.no */
+         if  (source_name=="yr.no")
+             std::replace(_forecastURL->begin(), _forecastURL->end(),'#', '/');
+            //_forecastURL->replace("#","/");
+         if  (source_name=="yr.no")
+             std::replace(_viewURL->begin(), _viewURL->end(),'#', '/');
+           // _viewURL->replace("#","/");
 
 
         _fileName = new std::string(filename);
