@@ -8,6 +8,7 @@ meecast (0.6.10) unstable; urgency=low
   * Fixed problem with timezone in source gismeto.ru
   * Fixed problem with updating weather forecast data for new station 
   * Added description string to gismeteo.ru 
+  * Fixed problem with first updating weather forecast in source yr.no
 
  -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200
 
